@@ -4,6 +4,7 @@ Revision history for Perl module App::Switchman
     + data_read_len config option
     * increased default data_read_len from 1Kb to 4Kb
     * using human-readable version of the error codes
+    * handle Net::Zookeeper::new initialization fails
 
 1.09 2015-06-15
     + --no-lock option
